[gd_scene load_steps=5 format=2]

[ext_resource path="res://CatPlayer.tscn" type="PackedScene" id=1]
[ext_resource path="res://scenes/Player.gd" type="Script" id=2]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 59.8495, 46.1864 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 86.0698, 23.93 )

[node name="Player" type="KinematicBody2D"]
collision_mask = 130
script = ExtResource( 2 )

[node name="CatPlayer" parent="." instance=ExtResource( 1 )]
position = Vector2( 0, 60.5 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, 78.645 )
shape = SubResource( 1 )

[node name="Sensor" type="Area2D" parent="."]
position = Vector2( 0, -28.4678 )
collision_layer = 256
collision_mask = 128

[node name="CollisionShape2D" type="CollisionShape2D" parent="Sensor"]
position = Vector2( -0.825001, 37.5428 )
shape = SubResource( 2 )

[node name="Label" type="Label" parent="."]
margin_left = -18.278
margin_top = -129.502
margin_right = 56.722
margin_bottom = -78.5017
size_flags_stretch_ratio = 6.46
custom_colors/font_color = Color( 1, 0.0352941, 0.0352941, 1 )
text = "ola"
uppercase = true
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="area_entered" from="Sensor" to="." method="_on_Sensor_area_entered"]
[connection signal="area_exited" from="Sensor" to="." method="_on_Sensor_area_exited"]
